album covers fixed

--- a/Song Selector.css
+++ b/Song Selector.css
@@ -7,8 +7,8 @@ margin: none;
 body {
     /* background-image: linear-gradient(to top, purple, white); */
     background: linear-gradient(28deg, rgb(66, 68, 71), rgb(168, 169, 171) 30%);
-    margin-left: 10%;
-    margin-right: 10%;
+    /* margin-left: 10%;
+    margin-right: 10%; */
     /* margin: auto; */
     border: 1px solid black;
     border-radius: 15px;
@@ -53,7 +53,7 @@ p {
     /* width: 100%; */
     /* border-radius: 100px; */
     /* color: rgb(240, 230, 165); */
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
     justify-content: space-between;
 }
 
@@ -94,15 +94,17 @@ hr {
     background-color: rgb(214, 227, 229);
     /* background-color: white; */
     border-radius: 15px;
-    width: 45%;
+    width: 46%;
+    height: 80%;
     display: inline-block;
     text-align: justify;
     margin-top: 1rem;
     margin-bottom: 1rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-    max-width: 45%;
-    min-height: 20%;
+    max-width: 49%;
+    /* max-height: 1%; */
+    /* min-height: 20%; */
 }
 
 .info-box {
@@ -148,11 +150,13 @@ hr {
 }
 
 img {
-    height: 12%;
-    width: 12%;
+    height: 25%;
+    width: 25%;
     float: left;
-    margin-top: 3%;
-    /* margin-bottom: 3%; */
+    margin-top: 5%;
+    /* display: inline-block; */
+    /* margin: auto; */
+    /* margin-bottom: 13%; */
 }
 
 .interaction {
